# tree-sitter-bqn

./: Cargo.toml
bindings/rust/: lib.rs
