[package]
name = "tree-sitter-bqn"
description = "BQN grammar for the tree-sitter parsing library"
version = "0.0.1"
keywords = ["incremental", "parsing", "BQN"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/DavidLee18/tree-sitter-bqn"
edition = "2024"
license = "MIT"

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = "0.25.8"

[build-dependencies]
cc = "1.0"
